# ResumeJsonGeneratorOutline

./: README.md  ResumeGeneratorJSON.py  package-lock.json  package.json  pyproject.toml  requirements.txt  resume_models.py  resume_models_OpenAi.py  server.py  validate_resume.js
frontend/: README.md  index.html
frontend/css/: style.css
frontend/js/: main.js
prompts/: dog_jobdescription.txt  dog_resume.txt  sample_job.txt  sample_resume.txt
tests/: README.md  run_tests.py  test_resume_generator.py
