[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-json-generator"
version = "0.1.0"
description = "A tool to generate resume data in JSON format from natural language descriptions"
readme = "README.md"
authors = [
    {name = "Vincent Lin", email = "lin.vincent97@gmail.com"}
]
license = {text = "Apache-2.0 "}
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.7"
dependencies = [
    "pydantic>=2.0.0",
    "outlines>=0.0.34",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "openai>=1.0.0",
    "llama-cpp-python>=0.2.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
]

[project.scripts]
resume-generator = "resume_json_generator.cli:main"
